# Hazelc

./: .gitignore  CMakeLists.txt  README.md  a  a.out  build.sh  buildWithProf.sh  p
Docs/: HazelDocs.tex
RunTime/: Makefile  lazy_eval_runtime.c
Theory/: LazyEval.c  Lazy_Eval.c  Lazy_List.c  Memoization.c  MonadConceptual.js  README.md  Thunk.c  optionals.c  strcat.c  streq.c  substr.c
samples/Conditionals/: Conditional.hz  streq.hz
samples/Functions/: function.hz
samples/Modules/: A.hz  b.hz  c.hz
samples/None/: none.hz
samples/strcat/: strcat.hz
samples/types/: types.hz
src/: Ast.cpp  AstNodes.cpp  CRuntimeProcudures.cpp  CommandLineArguments.cpp  CompileExpr.cpp  CompileExpressions.cpp  CompileHighLevel.cpp  CompileStatement.cpp  Compiled_Functions.cpp  Compiled_Types.cpp  Compiler.cpp  CompilerContext.cpp  CompilerUtil.cpp  ConstantFolding.cpp  DeadCodeElim.cpp  Demoduerlization.cpp  DemodularizationPass.cpp  InitHazel.cpp  ResolveImports.cpp  Scope.cpp  SemanticGlobalScope.cpp  SemanticLocalScope.cpp  SemanticTopLevel.cpp  TreeShake.cpp  TypeChecker.cpp  cli.cpp  error.cpp  lexxer.cpp  main.cpp  parser.cpp  semantic_analysis.cpp  sha256.cpp  visitor.cpp
src/Frontend/: AstNodes.cpp  Lexxer.cpp  Parser.cpp  TokenManager.cpp
src/IntermediatePasses/: BranchSimplfy.cpp  ConstantFolding.cpp  DeadCodeElim.cpp  DeadCodeElimination.cpp  DemodularizationPass.cpp  InliningFunctions.cpp  RecursiveImports.cpp  SemanticGlobalScope.cpp  SemanticLocalScope.cpp  TreeShake.cpp  TypeChecker.cpp
src/LLVMBackend/: CompileExpressions.cpp  CompileHighLevel.cpp  CompileStatement.cpp  CompiledFunctions.cpp  CompiledTypes.cpp  Compiler.cpp  CompilerContext.cpp  CompilerUtil.cpp
src/Util/: CommandLineArguments.cpp  Error.cpp
src/include/: Demoduerlization.h  InitHazel.h  cli.h  error.h  sha256.h  visitor.h
src/include/Frontend/: Ast.h  SemanticCheckScopes.h  SemanticTypes.h  Token.h  TokenManager.h  TypeChecker.h  lexxer.h  parser.h
src/include/backend/: Compiled_Functions.h  Compiled_Types.h  Compiler.h  CompilerContext.h  CompilerUtil.h  ComplierVisitors.h  Scope.h  compiler_visitors.h
src/include/optimization/: BranchSimplfy.h  ConstantFolding.h  DeadCodeElim.h  InliningFunctions.h  ResolveImports.h  TreeShake.h
